Trying to fix backstretch on Maak pg (unsuccessful, made progress)

--- a/css/_screen.scss
+++ b/css/_screen.scss
@@ -1,4 +1,4 @@
-$break-small: 600px;
+$break-small: 375px;
 $break-small-med: 750px;
 $break-medium: 900px;
 $break-med-large: 962px;
